--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<p>This is a place where you are immutable. Access your safe blog using the following URL format: /blog/[blog-config]</p>
+<p>This is a place where you are immutable. Access your safe blog using the following URL format: /imim/[blog-config]</p>
 
 E.g.
 
-<p><a href="/blog/traktionblog">/blog/traktionblog</a></p>
+<p><a href="/imim/traktionblog">/imim/traktionblog</a></p>
