- Updates blog listing to read json modified dates from directory listing dates (e.g. from sn_httpd). - Adds loading spinner when opening new page, so the user knows something is happening. - Adds MP4 video support in markdown image tags. Creates a video tag in HTML. - Adds links to headings on blog listing page. - Sorts articles from most recent to oldest on blog listing page. - Improvements to link styling.

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,3 +1,4 @@
 <div class="container article">
   <markdown [data]="message" (ready)="onReady()"></markdown>
 </div>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
