--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -4,3 +4,4 @@
   <a [routerLink]="[item.url]" [fragment]="'article'">Read the full article...</a>
   <hr class="divider">
 </div>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
