- Updates angular.json to expect root directory deploy. - Adds MP3 control support.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<p>This is a place where you are immutable. Access your safe blog using the following URL format: /imim/[blog-config]</p>
+<p>This is a place where you are immutable. Access your safe blog using the following URL format: /blog/[blog-xor]</p>
 
 E.g.
 
-<p><a href="/imim/traktionblog">/imim/traktionblog</a></p>
+<p><a href="/blog/72fd74ade78542395b9fc3e2be83db3a0219ab3eb35fc0a8a119fb5598a7b06b/">/blog/72fd74ade78542395b9fc3e2be83db3a0219ab3eb35fc0a8a119fb5598a7b06b/</a></p>
