--- a/src/app/publish/publish.component.html
+++ b/src/app/publish/publish.component.html
@@ -1,7 +1,48 @@
 <div class="container article" >
 
-  <p>test</p>
+  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
+    <div class="formElement">
+      <label for="targetBlog">How to publish?</label>
+      <select id="targetBlog" [formControl]="targetBlogControl">
+        <option value="existingBlog" selected="selected">Publish to this blog ({{listXor}})</option>
+        <option value="newBlog">Publish to a new blog</option>
+      </select>
+    </div>
 
+    <div class="formElement">
+      <label for="blogName">Blog name</label>
+      <input type="text" id="blogName" [formControl]="blogNameControl">
+    </div>
+
+    <div class="formElement">
+      <label for="articleName">Article name</label>
+      <input type="text" id="articleName" [formControl]="articleNameControl">
+    </div>
+
+    <div class="formElement">
+      <quill-editor formControlName="html" format="html"></quill-editor>
+    </div>
+    <div class="formElement">
+      <input id="save" type="submit" [formControl]="saveControl">
+    </div>
+  </form>
+
+  <div class="formElement">
+    <div *ngIf="articleStatus$ | async as articleStatus">
+        <p>Publish Details:</p>
+        <p>
+          Status: {{articleStatus.status}}<br/>
+          Message: {{articleStatus.message}}<br/>
+          Immutable Address: <a href="/blog/{{articleStatus.address}}">{{articleStatus.address}}</a>
+        </p>
+    </div>
+    <div *ngIf="pointerAddress != undefined">
+      <p>Pointer Address: <a href="/blog/{{pointerAddress}}">{{pointerAddress}}</a></p>
+    </div>
+    <div *ngIf="registerAddress != undefined">
+      <p>Register Address: <a href="/blog/{{registerAddress}}">{{registerAddress}}</a></p>
+    </div>
+  </div>
 
   <hr class="divider">
 </div>
