--- a/src/styles.css
+++ b/src/styles.css
@@ -42,9 +42,34 @@
   max-width: 50em;
 }
 
+.article_summary {
+  overflow: hidden;
+  min-width: 25em;
+  max-width: 50em;
+  max-height: 50em;
+}
+
+.fade {
+    position:absolute;
+    top:1em;
+    width:100%;
+    height:2em;
+    background: -webkit-linear-gradient(transparent, white);
+    background: -o-linear-gradient(transparent, white);
+    background: -moz-linear-gradient(transparent, white);
+    background: linear-gradient(transparent, white);
+}
+
 .divider {
   border-top: 1px solid #dee2e6;
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.formElement {
+  border-top: 0px;
+  text-align: left;
   margin-top: 20px;
   margin-bottom: 20px;
 }
